💚 Revert Ruff CI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,10 @@ build-backend = "setuptools.build_meta"
 
 [tool.pylint.'MESSAGES CONTROL']
 extension-pkg-whitelist = "pydantic"
+
+[tool.semantic_release]
+version_variables = [ "listmonk_client/__init__.py:__version__",]
+version_toml = [ "pyproject.toml:tool.poetry.version",]
+branch = "main"
+build_command = "pip install poetry && poetry build"
+commit_parser = "emoji"
